logging,comment,region template

--- a/tourArmenia-web/src/main/resources/messages_hy.properties
+++ b/tourArmenia-web/src/main/resources/messages_hy.properties
@@ -7,6 +7,7 @@ index.ADMIN=ԱԴՄԻՆԻՍՏՐԱՏՈՐ
 index.tourList=Տուր փաթեթների ցուցակ
 index.hotelsList=Հյուրանոցների ցուցակ
 index.regionList=Մարզերի ցանկ
+index.history=Հայոց պատմություն
 index.cars=ՄԵՔԵՆԱՆԵՐ
 index.carsList=Ավտոմեքենաների ցուցակ
 index.aboutAs=Մեր մասին
