--- a/tourArmenia-web/src/main/resources/messages.properties
+++ b/tourArmenia-web/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ index.ADMIN=ADMIN
 index.tourList=Tour packages list
 index.hotelsList=Hotels list
 index.regionList=Region list
+index.history=Armenian history
 index.cars=CARS
 index.carsList=Car list
 index.aboutAs=About us
