--- a/tourArmenia-web/src/main/resources/messages_ru.properties
+++ b/tourArmenia-web/src/main/resources/messages_ru.properties
@@ -7,6 +7,7 @@ index.ADMIN=АДМИНИСТРАТОР
 index.tourList=Список турпакетов
 index.hotelsList=Список отелей
 index.regionList=Список регионов
+index.history=История Армении
 index.cars=АВТОМОБИЛИ
 index.carsList=Список автомобилей
 index.aboutAs=О нас
