--- a/tourArmenia-web/src/main/resources/messages.properties
+++ b/tourArmenia-web/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+idex.HOME=HOME
+index.main=home page
+index.top=OUR TOP DEALS
 index.TOURS=TOURS
 index.HOTELS=HOTELS
 index.REGIONS=REGIONS
@@ -5,7 +8,11 @@ index.RENTAL=RENTAL
 index.PAGES=PAGES
 index.ADMIN=ADMIN
 index.tourList=Tour packages list
+index.tourView=Tour Packages List View
+index.tourBooking=Booking a tour
+index.booking=BOOKING
 index.hotelsList=Hotels list
+index.hotels=Hotels list view
 index.regionList=Region list
 index.history=Armenian history
 index.cars=CARS
@@ -15,8 +22,12 @@ index.contactUs=Contact us
 index.terms=Terms & privacy!
 index.signUp=Sign up
 index.logOut=Log out
+index.Account=Don’t have an Account?
 index.login=Login
+index.createAccount=Create your account
 name=NAME
+item.hotels=Armenia Hotels
+region=ARMENIA REGIONS
 region.centre=REGIONAL CENTRE
 tour.region=Region
 tour.price=PRICE
