--- a/tourArmenia-web/src/main/resources/messages_hy.properties
+++ b/tourArmenia-web/src/main/resources/messages_hy.properties
@@ -1,3 +1,6 @@
+idex.HOME=ՏՈՒՆ
+index.main=Գլխավոր էջ
+index.top=ՄԵՐ ԹՈՓ ԱՌԱՋԱՐԿՆԵՐԸ
 index.TOURS=ՏՈՒՐԵՐ
 index.HOTELS=ՀՅՈՒՐԱՆՈՑՆԵՐ
 index.REGIONS=ՄԱՐԶԵՐ
@@ -5,7 +8,12 @@ index.RENTAL=ՎԱՐՁԱԿԱԼՈՒԹՅՈՒՆ
 index.PAGES=ԷՋԵՐ
 index.ADMIN=ԱԴՄԻՆԻՍՏՐԱՏՈՐ
 index.tourList=Տուր փաթեթների ցուցակ
+index.tourView=Տուր փաթեթների ցանկի դիտում
+index.tourBooking=Տուրի ամրագրում\
+
+index.booking=ԱՄՐԱԳՐՈՒՄ
 index.hotelsList=Հյուրանոցների ցուցակ
+index.hotels=Հյուրանոցների ցանկի տեսք
 index.regionList=Մարզերի ցանկ
 index.history=Հայոց պատմություն
 index.cars=ՄԵՔԵՆԱՆԵՐ
@@ -15,8 +23,12 @@ index.contactUs=Կապվեք մեզ հետ
 index.terms=Պայմաններ և գաղտնիություն:
 index.signUp=Գրանցվել
 index.logOut=Դուրս գալ
+index.Account=Հաշիվ չունե՞ք:
 index.login=Մուտք գործել
+index.createAccount=Ստեղծեք ձեր հաշիվը
 name=ԱՆՈՒՆ
+item.hotels=Հայաստանի հյուրանոցներ
+region=ՀԱՅԱՍՏԱՆԻ ՄԱՐԶԵՐ
 region.centre=ՄԱՐԶԿԵՆՏՐՈՆ
 tour.region=ՄԱՐԶ
 tour.price=ԳԻՆ
