--- a/tourArmenia-web/src/main/resources/messages_ru.properties
+++ b/tourArmenia-web/src/main/resources/messages_ru.properties
@@ -1,3 +1,6 @@
+idex.HOME=ДОМ
+index.main=Главная страница
+index.top=НАШИ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ
 index.TOURS=ТУРЫ
 index.HOTELS=ОТЕЛИ
 index.REGIONS=РЕГИОНЫ
@@ -5,7 +8,11 @@ index.RENTAL=АРЕНДА
 index.PAGES=СТРАНИЦ
 index.ADMIN=АДМИНИСТРАТОР
 index.tourList=Список турпакетов
+index.tourView=Список турпакетов
+index.tourBooking=Бронирование тура
+index.booking=БРОНИРОВАНИЕ
 index.hotelsList=Список отелей
+index.hotels=Просмотр списка отелей
 index.regionList=Список регионов
 index.history=История Армении
 index.cars=АВТОМОБИЛИ
@@ -15,8 +22,12 @@ index.contactUs=Связаться с нами
 index.terms=Условия и конфиденциальность!
 index.signUp=Зарегистрироваться
 index.logOut=Выйти
+index.Account=У вас нет учетной записи?
 index.login=Авторизоваться
+index.createAccount=Создать аккаунт
 name=ИМЯ
+item.hotels=Отели Армении
+region=РЕГИОНЫ АРМЕНИИ
 region.centre=РЕГИОНАЛЬНЫЙ ЦЕНТР
 tour.region=РЕГИОН
 tour.price=ЦЕНА
