validation and exception handling

--- a/tourArmenia-web/src/main/resources/messages.properties
+++ b/tourArmenia-web/src/main/resources/messages.properties
@@ -40,5 +40,8 @@ admin.item=CREATE ITEM
 admin.tour=CREATE TOUR
 admin.car=CREATE CAR
 admin.region=CREATE REGION
+update.item=UPDATE ITEM
+update.car=UPDATE CAR
+update.tour=UPDATE TOUR
 
 
