--- a/tourArmenia-web/src/main/resources/messages_hy.properties
+++ b/tourArmenia-web/src/main/resources/messages_hy.properties
@@ -37,3 +37,10 @@ tour.duration=ՏԵՒՈՂՈՒԹՅՈՒՆԸ
 tour.image=ՆԿԱՐ
 tour.date=ՄԵԿՆԱՐԿԻ ԱՄՍԱԹԻՎ
 car.seats=ՆՍՏԱՏԵՂԵՐ
+admin.item=ԱՎԵԼԱՑՆԵԼ ԻՐԵՐ(հյուրանոց կամ տեսարժան վայրեր)
+admin.tour=ԱՎԵԼԱՑՆԵԼ ՏՈՒՐ
+admin.car=ԱՎԵԼԱՑՆԵԼ ՄԵՔԵՆԱ
+admin.region=ԱՎԵԼԱՑՆԵԼ ՄԱՐԶ
+update.item=ԹԱՐՄԱՑՆԵԼ ՀՅՈՒՐԱՆՈՑԸ ԿԱՄ ՏԵՍԱՐԺԱՆ ՎԱՅՐԸ
+update.car=ԹԱՐՄԱՑՆԵԼ ՄԵՔԵՆԱՆ
+update.tour=ԹԱՐՄԱՑՆԵԼ ՏՈՒՐԸ
