--- a/tourArmenia-web/src/main/resources/messages_ru.properties
+++ b/tourArmenia-web/src/main/resources/messages_ru.properties
@@ -36,3 +36,10 @@ tour.duration=ПРОДОЛЖИТЕЛЬНОСТЬ
 tour.image=ИЗОБРАЖЕНИЕ
 tour.date=ДАТА НАЧАЛА
 car.seats=СИДЕНЬЯ
+admin.item=ДОБАВИТЬ ПУНКТ
+admin.tour=ДОБАВИТЬ ТУР
+admin.car=ДОБАВИТЬ МАШИНУ
+admin.region=ДОБАВИТЬ РЕГИОН
+update.item=ОБНОВИТЬ ПУНКТ
+update.car=ОБНОВИТЬ МАШИНУ
+update.tour=ОБНОВИТЬ ТУР
